hopefully fixing a few svg on mobile bugs

--- a/vtn.css
+++ b/vtn.css
@@ -22,7 +22,7 @@ hr {
 }
 button {
 	background-color: white;
-	width: 20%;
+	width: 5em;
 	height: 2.7em;
 	font-family: Roboto Condensed, sans-serif;
 	font-size: 100%;
@@ -54,7 +54,7 @@ ul, li, li a {
 	display: inline-block;
 }
 li a {
-font-size: 1.1em;
+	font-size: 1.1em;
 	color: white;
 	padding: 0.5em 0.5em;
 	text-decoration: none;
@@ -86,7 +86,9 @@ font-size: 1.1em;
 	margin-top: 3em;
 }
 #img4 {
-	scale: 30%;
+	width: 6em;
+	height: 6em;
+	margin-top: 3em;
 	margin-bottom: 0em;
 }
 #nl {
@@ -102,7 +104,7 @@ font-size: 1.1em;
 	padding-bottom: 6em;
 }
 #card3 {
-	padding-bottom: 0.7em;
+	padding-bottom: 9.6em;
 	background-color: darkgray;
 }
 #card2 {
